--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
+    <link 
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
@@ -30,6 +30,59 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class="col-md-1">9:00AM</div>
+        <textarea id="9am" class="col-md-10"></textarea>
+        <button data-value="9am" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">10:00AM</div>
+        <textarea id="10am" class="col-md-10 events"></textarea>
+        <button data-value="10am" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">11:00AM</div>
+        <textarea id="11am" class="col-md-10 events"></textarea>
+        <button data-value="11am" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">12:00PM</div>
+        <textarea id="12pm" class="col-md-10 events"></textarea>
+        <button data-value="12pm"class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">1:00PM</div>
+        <textarea id="1pm" class="col-md-10 events"></textarea>
+        <button data-value="1pm" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">2:00PM</div>
+        <textarea id="2pm" class="col-md-10 events"></textarea>
+        <button data-value="2pm" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">3:00PM</div>
+        <textarea id="3pm" class="col-md-10 events"></textarea>
+        <button data-value="3pm" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">4:00PM</div>
+        <textarea id="4pm" class="col-md-10 events"></textarea>
+        <button data-value="4pm" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+  
+      <div class="row time-block">
+        <div class="col-md-1">5:00PM</div>
+        <textarea id="5pm" class="col-md-10 events"></textarea>
+        <button data-value="5pm" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
