--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
   </head>
 
   <body>
+    <!-- HEADER/JUMBOTRON HTML -->
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
+    <!-- HOURLY PLANNER HTML CONTAINING 9 TIMEBLOCKS (9AM-5PM) -->
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-block">
-        <div class="col-md-1">9 AM</div>
-            
+        <div class="col-md-1">9 AM</div> 
         <textarea id="9am" class="col-md-10"></textarea>
         <button data-value="9am" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
@@ -86,6 +88,7 @@
       </div>
     </div>
 
+    <!-- JQUERY, MOMENT, & JAVASCRIPT LINKS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
